tests/ui/recursion_limit/invalid_macro.stderr
error: malformed `recursion_limit` attribute input
  --> $DIR/invalid_macro.rs:1:1
   |
LL | #![recursion_limit = foo!()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: must be of the form
   |
LL | #![recursion_limit = "N"]
   | ~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

